<resources>
    <string name="app_name">Social Routing</string>
    <string name="title_activity_route_creation">Map</string>
    <string name="finish">Finish</string>
    <string name="search_image_button_description">Search for the current location, to zoom on it in map</string>
    <string name="location">Location</string>
    <string name="back_image_button_description">Go one step back, remove one marker and line from the map</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_email">No Email</string>
    <string name="default_value_rating">0.0</string>
    <string name="star_image_to_represent_rating">Star Image to represent rating</string>
    <string name="routes_created">Routes Created :</string>
    <string name="no_routes_to_show">Nothing Found …</string>
    <string name="finish_route_creation">Finish Route Creation</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="category">Categories</string>
    <string name="results">Results:</string>
    <string name="title_activity_route_representation">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="server_client_id">989313558568-hh544t4t551d4dd04amadvj3sft9hj0t.apps.googleusercontent.com</string>
    <string name="routes_search">Routes Search</string>
    <string name="communicate">Communicate</string>
    <string name="route_creation">Route Creation</string>
    <string name="user_profile">User Profile</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="start_live_tracking">Start Live Tracking</string>
    <string name="mode_of_transport">Mode of Transport</string>
    <string name="driving">driving</string>
    <string name="walking">walking</string>
    <string name="bicycling">bicycling</string>
    <string name="transit">transit</string>
    <!-->
        Login Activity
    <!-->
    <string name="welcome_message">Welcome %s</string>
    <string name="google_login_error">Something went wrong try again</string>
    <!-->
        Navigation Activity
    <!-->
    <string name="fill_location_form">Fill the Location first</string>
    <!-->
        Navigation Activity
    <!-->
    <string name="search">Search</string>
    <string name="route_location">Route location</string>
    <string name="markers_required">First add markers to path, to save the Route.</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="success_route_creation">The Route was created Successfully!</string>
    <string name="fill_name_categories_form">Need to fill at least the name and one category</string>
    <string name="confirmation_to_delete">Are you sure you want to erase your creation ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-->
        Navigation Activity
    <!-->
    <string name="route_id_intent_message">ROUTE_ID_MESSAGE</string>
    <string name="route_intent_message">ROUTE_MESSAGE</string>
    <string name="location_intent_message">LOCATION_MESSAGE</string>

    <string name="route_url">/route/{identifier}</string>
    <string name="api_url">http://10.0.2.2:8080/api.sr/</string>

    <string name="current">Current</string>
    <string name="server_down_message">The Server is currently down, sorry! Try later…</string>
    <string name="where_do_you_want_to_go">Where do you want to go ?</string>
    <string name="where_do_you_want_to_create">Where do you want to create?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points_of_interest">Points Of Interest</string>
    <string name="continue_metadata">Continue</string>
</resources>
