<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_route_creation"
                android:icon="@drawable/route_creation_nav_image"
                android:title="@string/route_creation"/>
        <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/user_profile_nav_image"
                android:title="@string/user_profile"/>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
