<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/titleTextView"
            android:background="@color/colorPrimary"
            android:text="@string/finish_route_creation"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="center"/>
    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nametextView"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" android:textAlignment="viewStart"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEditText"/>
    <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/descriptionTextView"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" android:textAlignment="viewStart"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/descriptionEditText"
            android:importantForAutofill="no"/>
    <TextView
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/categorytextView"
            android:textAlignment="center" android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:id="@+id/creationProgressBar" tools:visibility="gone" android:layout_gravity="center"/>
    <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/categoriesChipGroup"/>
</LinearLayout>