<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content">

    <TextView
            android:text="@string/mode_of_transport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modeOfTransporttextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="113dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="113dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/modeOfTransporttextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="86dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="86dp"
            android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/driving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/drivingRadioButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/walking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/walkingRadioButton" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/bicycling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bicyclingRadioButton" android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmChoiceButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="161dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>