<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/sliding_layout"
        android:layout_height="match_parent"
        app:umanoDragView="@id/dragView_linearLayout"
        app:umanoScrollableView="@+id/dragView_recyclerView"
        app:umanoInitialState="collapsed"
        android:layout_gravity="bottom"
        android:gravity="bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <fragment android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/map"
                  tools:context=".activities.RouteCreationActivity"
                  android:name="com.google.android.gms.maps.SupportMapFragment"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="?attr/actionModeCloseDrawable"
                android:id="@+id/backImageButton"
                android:onClick="back"
                android:contentDescription="@string/back_image_button_description"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <include layout="@layout/spinner_progress_bar"
                 android:id="@+id/spinnerProgressBar"
                 android:layout_width="75dp" android:layout_height="75dp"
                 app:layout_constraintTop_toTopOf="@+id/map"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="25dp"
                 android:layout_marginTop="25dp"/>

        <Button
                android:text="@string/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finishButton"
                style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:layout_gravity="center"
                android:onClick="finish" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/map"
                android:layout_marginEnd="136dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="136dp" app:layout_constraintStart_toStartOf="parent"/>
        <Button
                android:text="@string/continue_metadata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/routeMetadataButton"
                style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:layout_gravity="center"
                android:onClick="finishRouteMetadata" android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/map"
                android:layout_marginEnd="136dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="136dp" app:layout_constraintStart_toStartOf="parent"
                tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.333"
            android:id="@+id/dragView_linearLayout" tools:visibility="visible">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/points_of_interest"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_light_pressed"
                android:id="@+id/points_of_interest_textView"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dragView_recyclerView"
                app:layout_constraintVertical_bias="0.20"/>

    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>