<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_user_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.UserProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userRatingBar"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.496"
                android:numStars="5" android:rating="0" android:isIndicator="true"/>
        <TextView
                android:text="@string/no_email"
                android:layout_width="342dp"
                android:layout_height="41dp"
                android:id="@+id/userEmailTextView"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.49"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/userRatingBar"/>
        <TextView
                android:text="@string/no_routes_to_show"
                android:layout_width="128dp"
                android:layout_height="24dp" android:id="@+id/emptyUserRoutesTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textAlignment="center"
                android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/userCreatedRoutesTextView"
                android:layout_marginStart="140dp" app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorPrimary" tools:visibility="invisible"/>
        <ListView
                android:layout_width="399dp"
                android:layout_height="378dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.421" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/userCreatedRoutesTextView"
                android:id="@+id/userRoutesCreatedListView" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/routes_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userCreatedRoutesTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="center"
                android:typeface="serif" android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/userEmailTextView"
                android:layout_marginEnd="256dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>